@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 AUX perl-5.8.7-MakeMaker-RUNPATH.patch 859 RMD160 b0e95fcd9b1bbc085e9986f8910e3fbcf3f78eb2 SHA1 1e7c2f05ffaf8f6aee753ab106a9798e6920ff06 SHA256 3d327c525e0cf57899eca48d417fa4363f40da9b0d6b70b61e951521749047ab
 AUX perl-5.8.8-CAN-2005-0448-rmtree-2.patch 8187 RMD160 db38f78ef5de917719c810595072929ecb11c93a SHA1 da502e4a524b4c86e24ad5e5a027657ebecb9bd5 SHA256 def78de69a0ef27204dfc1f5f39fcd4da1b38327f446e4dca1d37b9890b338e4
@@ -39,30 +39,20 @@ DIST perl-5.14.1.tar.bz2 13266293 RMD160 57347db6c2794f5599f6f59183b6f2a92133a75
 DIST perl-5.14.2-1.tar.bz2 5103 RMD160 efec2b0cc77febf4f7d45cef0245f851cd41cff8 SHA1 3c99f5e473749962ac5317f98271f2afebf30791 SHA256 0f553de072f80670880b96ef8ca0a79e4e1505f9bf1df55f6de55b95ac0862e7
 DIST perl-5.14.2.tar.bz2 13226972 RMD160 4a15090b2b4fdfa9abda6444d1825e62c393c891 SHA1 e48d11c6fd1ee61985b475d7f261d774296a1367 SHA256 c2a2362e8d1fdd2bfbfde801fcd78241f154c164f00fba76065ab8cc5c7b06cd
 DIST perl-5.8.8.tar.bz2 10123359 RMD160 e78f26d9b96e6db35f946ad4ff55e3a69385c71b SHA1 4aab490040727ca4419098720eca2ba4367df539 SHA256 818a140d9c04ea8dab3a05104b34ced7f7d9d0a91bfed91baf89a84d0dfb1bc9
-EBUILD perl-5.10.1.ebuild 18125 RMD160 061e49a2031f270f2804923069d98ddf0a8edd40 SHA1 cb35c08fe202cd4e1eae39439cc307193a4bc72d SHA256 ed5ca8861b704f9dbfaa9cadddbe464644dfe93bdefe71d3118abd7d0c935776
-EBUILD perl-5.12.3-r1.ebuild 19395 RMD160 2fecbfe18cfc23bf4945ac564356d250088be46a SHA1 a03feeaa327eb4411e7f0fba7bf664aada53bca6 SHA256 88d44ed7abd26f5ee1077d3d52e0f1ba2799aeb34dc60fc612ea9609efe127ed
-EBUILD perl-5.12.4-r1.ebuild 19317 RMD160 bb3c2031ef05e31b09e43531f977ffec6b33cf24 SHA1 813b251ef01d4eda2518654896142e6a9eb345c9 SHA256 ddc59f9452622232aadb261437a5b970dd4b429e67d08df24aa748138d0f93e4
-EBUILD perl-5.12.4.ebuild 19434 RMD160 1c3ea1f1045ab464bfbcb2530e0662e3e207bf92 SHA1 0f036fb213acc46db1538c85348c4c2fae0b2217 SHA256 1c5946b4c48a1d87026f62d03ef5d4eefc10fa93569d1a4ae78ea4309c77ac25
-EBUILD perl-5.14.1-r1.ebuild 19996 RMD160 c56e6bdcfe2923caa784407cdc6bd4f100845f33 SHA1 2fc45f90032c9223b257ed736567688a1460e5ae SHA256 bb8edc920f0450f1cd78277310a4bf95954e00645a84fa29351e0e6e49d86b6f
-EBUILD perl-5.14.1.ebuild 19375 RMD160 4366d553c06db5f874a2a9ba0f039b8991fe3310 SHA1 016d380d9ccd3dd7d4af64598c5accdd75b230f4 SHA256 85cf69568c9626ff875c66faa083db9f1411a4ea266e29b0f111029908865fb6
-EBUILD perl-5.14.2.ebuild 19819 RMD160 5be9087528a681e0c3f850a0015f3080fe63ad8a SHA1 02d17abdce25436d25a3d14e26aa2bc468d0f163 SHA256 c63523e1ad29d7ba97c64344b2bdaef33a08fa631d66f10650e1bb97d126666a
-EBUILD perl-5.8.8-r8.ebuild 20685 RMD160 407925611750782be465654d4204c35fb5fd98db SHA1 7dfcf6028d61d42a6303dab28ab5d370f0fc27a6 SHA256 81d7022079a0d387b3caa8af0301e49741da5bd56d8d28f7d19eabf96c558998
-MISC ChangeLog 72869 RMD160 dc3fee7a48f62070d52bc0292882a08bf1453f36 SHA1 31e198c61d9fb9b7edafdd84648d06ae23225213 SHA256 9be72d8d46e94ded671d969d25711227afbabc2652330f63f37986a2c4928ffe
+EBUILD perl-5.10.1.ebuild 18186 RMD160 24153126a20b96efc5728c475ea9837acfc9b787 SHA1 bca7c1de589e00fb828cb318459feb0512a04ff3 SHA256 e78712f27936a68b51f0e70239dd01f28adc79a7d1f1ca8580fcae6a0b51e707
+EBUILD perl-5.12.3-r1.ebuild 19453 RMD160 ac4caabafee25f4fc23d2a472309b2e6caaab0a2 SHA1 59a8a9dc67c44fa19ee93628e0b708f31ef19ca6 SHA256 d675c932b718a36b59d666fec13d0a5a77b02b8450a961a7e1a833dcaf560de4
+EBUILD perl-5.12.4-r1.ebuild 19372 RMD160 c8a8930001cb67567ab13ba685fd402f9e757f2b SHA1 51e2fec8c4c4bc28a4f4695bf43962e0b395fb1a SHA256 5daba3ba20c18960efdcc372ad697231ecb8f36515b8bdb2a386444992c431bd
+EBUILD perl-5.12.4.ebuild 19495 RMD160 817d388e170806fb7d22f4b2a3f08056a77d858e SHA1 f3b5c8f03838caa344b0fa681622c7a3308ec4f2 SHA256 4948ed320cdabf857a90f456c0f7c98feb8f6f4e407075d9957bdf7f578f6fb0
+EBUILD perl-5.14.1-r1.ebuild 20057 RMD160 4bd85335f7390af304941ce4af1c462ed84ea5e2 SHA1 2863a56c8a5f6f4fed6fedf071549fa604a29ff2 SHA256 e831beac3a6a8d637090e1333e6cffe8277ff615c1893417df7d24f63b8e8d17
+EBUILD perl-5.14.1.ebuild 19436 RMD160 60af04ba3e95bb17685aec429c2b38515fe44ce1 SHA1 a833475ccf2c6c1179c7c21ed931e79cc4ac99bc SHA256 77c5ad7783d7786cb65b0f3e179bee779520b065901d89c3bc244447f8181cf2
+EBUILD perl-5.14.2.ebuild 19876 RMD160 ccf5de654da2db984bb18cf081372236ed54d779 SHA1 e6a8d9766577bb86379b03b77e04a8b393c49439 SHA256 48f9f9d9ec56818c1213517c4405c2df4dba9ca536a633edc75617d63d73cd2b
+EBUILD perl-5.8.8-r8.ebuild 20741 RMD160 8a501ecd33fb95a5d95a0cfcf118915940ef0d0d SHA1 d80b5b4a80c888ecd692607da5841f67a2781047 SHA256 0ccd023b46d13e2c36bc7d9b5cf797e8288d2f76b683ac67802d7a1c39e6399e
+MISC ChangeLog 73131 RMD160 0dd25228d1a74e036b3d7e7d6d0c2a68cb27cac3 SHA1 4d8db746d43ee2bd66686e58452742d9894bd7cf SHA256 9a32eaa1993ede6a6645ac4746bfad09b58850f601917b05247617c963d14ab8
 MISC metadata.xml 451 RMD160 8424230d79d13df7462c454050058b3526a78e92 SHA1 1ae85db5c1c1fc6413ca324ebc93b6894831b437 SHA256 49e06011c113616fa1f618cf58d42c2d6abbce5f71936f109b6ae3a5dfff587c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQIcBAEBCAAGBQJOuBklAAoJEF0huFKJUZL5nR4P/RwUrX0lKwBpmK3Vna2ON9E5
-RSA7+uucCS8U60ikieIS/Em9VBobkWOqbveSy/13GgzB0pyj5AOBjORaFPUweZw9
-v6p1lanm+iH24oZ7uuukRZ4qShnIyy7v6pKkgnJjyvwOqlDOMbJT5+EzPfr8HZeR
-794ijjb6L9QYx2q/3LYyFy1ZAZ/cKuT9SSCovE2vKnZFRlswSLlHcs4oDVEhFUJn
-gyrkJmmQP5MtdsDDiOVcx+/I3MXEtnVl9YBtrGL8VjM4tQ0CmDcR6YUzSL7CBfJK
-noX/tuSk6o03gl35dQ3vj1gpF3eX3x9hkpMdVlHydWJnolUJqi6f2qiq61Go2pNF
-thx1UCwA+k1vNno+8CPYh96faWZ6fUvGBx4+LS6ZwATIFRbdfRZG0bOvxCZORYCp
-34t2jgwvhdkMAGsH6eb7uVzqla73YG0dtu9gGW8aMUnmaOLoj/rTmEU+DO6amXBS
-GTdGrGf5zk4SasQFCJOWIQZYvy3ARLyC6XdOvAiZl+Gb8rkYCnwsu5B4BOrQm9bW
-G4LRW8aeKWFoVVZgOA1Qc82hoxVFDeZ3aD2jnhZ+pt5jR4YgAkbBidcqdMONTSb1
-lqoPUAcSaSnxy1rMNuMyM+wqvJddO2eoPhZhDH4riZctu0ujvLSfVE1VP6QeWpDw
-ltxdMCbFbRhoxpNHTWRd
-=NBoW
+iEYEARECAAYFAk8CNS0ACgkQ/ejvha5XGaMbhQCg0PHQjdHk7mDbT7AjayHsYgeI
+yWoAoJYOY79OdKAA+9W16Y1mAmAkoPRr
+=WxC9
 -----END PGP SIGNATURE-----
